--- a/scripts/ties_troubleshooting.ipynb
+++ b/scripts/ties_troubleshooting.ipynb
@@ -24,9 +24,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['cluster_id', 'fitted', 'index', 'orig', 'param_num', 'params', 'rmse',\n",
+       "       'vert', 'year', '.geo', 'paramNum', 'vert90', 'vert91', 'vert92',\n",
+       "       'vert93', 'vert94', 'vert95', 'vert96', 'vert97', 'vert98', 'vert99',\n",
+       "       'vert00', 'vert01', 'vert02', 'vert03', 'vert04', 'vert05', 'vert06',\n",
+       "       'vert07', 'vert08', 'vert09', 'vert10', 'vert11', 'vert12', 'vert13',\n",
+       "       'vert14', 'vert15', 'vert16', 'vert17', 'vert18', 'vert19', 'vert20',\n",
+       "       'vert21', 'NRMSE', 'AIC', 'AICc', 'index_cid', 'len_vert', 'len_year',\n",
+       "       'len_fitted', 'len_orig', 'max_rmse', 'rmse_num', 'n_segs', 'vertscore',\n",
+       "       'rankVscore', 'rankAICc', 'combined', 'selected', 'spikeThreshold',\n",
+       "       'maxSegments', 'recoveryThreshold', 'pvalThreshold'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#read in the intermediate param selection outputs - this path can be changed to a local version\n",
     "fn = r'/vol/v1/proj/LTOP_FTV_Py/param_selection_testing_outputs/intermediate_testing_output.csv'\n",
@@ -36,21 +57,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['cluster_id', 'fitted', 'index', 'orig', 'param_num', 'params', 'rmse',\n",
+       "       'vert', 'year', '.geo', 'paramNum', 'vert90', 'vert91', 'vert92',\n",
+       "       'vert93', 'vert94', 'vert95', 'vert96', 'vert97', 'vert98', 'vert99',\n",
+       "       'vert00', 'vert01', 'vert02', 'vert03', 'vert04', 'vert05', 'vert06',\n",
+       "       'vert07', 'vert08', 'vert09', 'vert10', 'vert11', 'vert12', 'vert13',\n",
+       "       'vert14', 'vert15', 'vert16', 'vert17', 'vert18', 'vert19', 'vert20',\n",
+       "       'vert21', 'NRMSE', 'AIC', 'AICc', 'index_cid', 'len_vert', 'len_year',\n",
+       "       'len_fitted', 'len_orig', 'max_rmse', 'rmse_num', 'n_segs', 'vertscore',\n",
+       "       'rankVscore', 'rankAICc', 'combined', 'selected', 'spikeThreshold',\n",
+       "       'maxSegments', 'recoveryThreshold', 'pvalThreshold'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "####set some user args#### \n",
     "#select a cluster id, not sure if this is what we want to do or if we want to iterate? \n",
     "select_cluster = 37\n",
     "clust_df = df.loc[df.cluster_id == select_cluster]\n",
-    "clust_df.shape\n",
+    "clust_df.columns\n",
     "#select the param you want to plot \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,9 +111,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 63)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#do the subsetting \n",
     "#first get the max mean value for each param - this will be a one line dataframe for the cluster id in question\n",
@@ -83,7 +136,7 @@
     "#then maxSegments\n",
     "max_select = get_max_mean(clust_df,'maxSegments')\n",
     "#then pvalThreshold \n",
-    "pval_select = get_max_mean(clust_df,'pvalTreshold')\n",
+    "pval_select = get_max_mean(clust_df,'pvalThreshold')\n",
     "\n",
     "#then do the sequential subsetting, starting with the full dataframe - in the actual code this is a subset of the df for the cluster\n",
     "#TODO the clust_df here is not actually correct, that will be the ties not the full df for the cluster_id\n",
