--- a/scripts/ties_troubleshooting.ipynb
+++ b/scripts/ties_troubleshooting.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "(5, 63)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,9 +141,9 @@
     "#then do the sequential subsetting, starting with the full dataframe - in the actual code this is a subset of the df for the cluster\n",
     "#TODO the clust_df here is not actually correct, that will be the ties not the full df for the cluster_id\n",
     "df1 = clust_df.loc[clust_df.recoveryThreshold == rec_select.recoveryThreshold.iloc[0]]\n",
-    "df2 = df1.loc[df1.spikeThreshold == df1.spikeThreshold.iloc[0]]\n",
-    "df3 = df2.loc[df2.maxSegments == df2.maxSegments.iloc[0]]\n",
-    "df4 = df3.loc[df3.pvalThreshold == df3.pvalThreshold.iloc[0]]\n",
+    "df2 = df1.loc[df1.spikeThreshold == spike_select.spikeThreshold.iloc[0]]\n",
+    "df3 = df2.loc[df2.maxSegments == max_select.maxSegments.iloc[0]]\n",
+    "df4 = df3.loc[df3.pvalThreshold == pval_select.pvalThreshold.iloc[0]]\n",
     "\n",
     "#this will be the output, which ideally has only one row left? \n",
     "df4.shape\n"
