ties rank revised

--- a/scripts/ties_troubleshooting.ipynb
+++ b/scripts/ties_troubleshooting.ipynb
@@ -24,30 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['cluster_id', 'fitted', 'index', 'orig', 'param_num', 'params', 'rmse',\n",
-       "       'vert', 'year', '.geo', 'paramNum', 'vert90', 'vert91', 'vert92',\n",
-       "       'vert93', 'vert94', 'vert95', 'vert96', 'vert97', 'vert98', 'vert99',\n",
-       "       'vert00', 'vert01', 'vert02', 'vert03', 'vert04', 'vert05', 'vert06',\n",
-       "       'vert07', 'vert08', 'vert09', 'vert10', 'vert11', 'vert12', 'vert13',\n",
-       "       'vert14', 'vert15', 'vert16', 'vert17', 'vert18', 'vert19', 'vert20',\n",
-       "       'vert21', 'NRMSE', 'AIC', 'AICc', 'index_cid', 'len_vert', 'len_year',\n",
-       "       'len_fitted', 'len_orig', 'max_rmse', 'rmse_num', 'n_segs', 'vertscore',\n",
-       "       'rankVscore', 'rankAICc', 'combined', 'selected', 'spikeThreshold',\n",
-       "       'maxSegments', 'recoveryThreshold', 'pvalThreshold'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#read in the intermediate param selection outputs - this path can be changed to a local version\n",
     "fn = r'/vol/v1/proj/LTOP_FTV_Py/param_selection_testing_outputs/intermediate_testing_output.csv'\n",
@@ -57,30 +36,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['cluster_id', 'fitted', 'index', 'orig', 'param_num', 'params', 'rmse',\n",
-       "       'vert', 'year', '.geo', 'paramNum', 'vert90', 'vert91', 'vert92',\n",
-       "       'vert93', 'vert94', 'vert95', 'vert96', 'vert97', 'vert98', 'vert99',\n",
-       "       'vert00', 'vert01', 'vert02', 'vert03', 'vert04', 'vert05', 'vert06',\n",
-       "       'vert07', 'vert08', 'vert09', 'vert10', 'vert11', 'vert12', 'vert13',\n",
-       "       'vert14', 'vert15', 'vert16', 'vert17', 'vert18', 'vert19', 'vert20',\n",
-       "       'vert21', 'NRMSE', 'AIC', 'AICc', 'index_cid', 'len_vert', 'len_year',\n",
-       "       'len_fitted', 'len_orig', 'max_rmse', 'rmse_num', 'n_segs', 'vertscore',\n",
-       "       'rankVscore', 'rankAICc', 'combined', 'selected', 'spikeThreshold',\n",
-       "       'maxSegments', 'recoveryThreshold', 'pvalThreshold'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "####set some user args#### \n",
     "#select a cluster id, not sure if this is what we want to do or if we want to iterate? \n",
@@ -92,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,23 +62,54 @@
     "    #this assumes you've already subset by cluster_id as is the case in the param selection code \n",
     "    #get the mean by possible param values \n",
     "    df1 = pd.DataFrame(df1.groupby([col_name])['combined'].mean()).reset_index()\n",
-    "    #get the max mean value for the given param \n",
-    "    df2 = df1.loc[df1['combined'] == df1['combined'].max()]\n",
-    "    return df2"
+    "    # df1 = df.sort_values('combined')\n",
+    "    # #get the max mean value for the given param \n",
+    "    # df2 = df1.loc[df1['combined'] == df1['combined'].max()]\n",
+    "    return df1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ben.roberts/.conda/envs/ltop_py/lib/python3.7/site-packages/ipykernel_launcher.py:13: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  del sys.path[0]\n",
+      "/home/ben.roberts/.conda/envs/ltop_py/lib/python3.7/site-packages/ipykernel_launcher.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n",
+      "/home/ben.roberts/.conda/envs/ltop_py/lib/python3.7/site-packages/ipykernel_launcher.py:15: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  from ipykernel import kernelapp as app\n",
+      "/home/ben.roberts/.conda/envs/ltop_py/lib/python3.7/site-packages/ipykernel_launcher.py:16: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(5, 63)"
+       "(5, 67)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,15 +127,26 @@
     "#then pvalThreshold \n",
     "pval_select = get_max_mean(clust_df,'pvalThreshold')\n",
     "\n",
+    "clust_df['rec_rank'] = clust_df['recoveryThreshold'].map(dict(zip(rec_select.recoveryThreshold,rec_select.combined)))\n",
+    "clust_df['spike_rank'] = clust_df['spikeThreshold'].map(dict(zip(spike_select.spikeThreshold,spike_select.combined)))\n",
+    "clust_df['max_rank'] = clust_df['maxSegments'].map(dict(zip(max_select.maxSegments,max_select.combined)))\n",
+    "clust_df['pval_rank'] = clust_df['pvalThreshold'].map(dict(zip(pval_select.pvalThreshold,pval_select.combined)))\n",
+    "\n",
     "#then do the sequential subsetting, starting with the full dataframe - in the actual code this is a subset of the df for the cluster\n",
-    "#TODO the clust_df here is not actually correct, that will be the ties not the full df for the cluster_id\n",
-    "df1 = clust_df.loc[clust_df.recoveryThreshold == rec_select.recoveryThreshold.iloc[0]]\n",
-    "df2 = df1.loc[df1.spikeThreshold == spike_select.spikeThreshold.iloc[0]]\n",
-    "df3 = df2.loc[df2.maxSegments == max_select.maxSegments.iloc[0]]\n",
-    "df4 = df3.loc[df3.pvalThreshold == pval_select.pvalThreshold.iloc[0]]\n",
+    "# #TODO the clust_df here is not actually correct, that will be the ties not the full df for the cluster_id\n",
+    "clust_df.rec_rank.max()\n",
+    "df1 = clust_df.loc[clust_df.rec_rank == clust_df.rec_rank.max()]\n",
+    "df2 = df1.loc[df1.spike_rank == df1.spike_rank.max()]\n",
+    "df3 = df2.loc[df2.max_rank == df2.max_rank.max()]\n",
+    "df4 = df3.loc[df3.pval_rank == df3.pval_rank.max()]\n",
+    "\n",
+    "df4.shape\n",
+    "# df2 = df1.loc[df1.spikeThreshold == spike_select.spikeThreshold.iloc[0]]\n",
+    "# df3 = df2.loc[df2.maxSegments == max_select.maxSegments.iloc[0]]\n",
+    "# df4 = df3.loc[df3.pvalThreshold == pval_select.pvalThreshold.iloc[0]]\n",
     "\n",
     "#this will be the output, which ideally has only one row left? \n",
-    "df4.shape\n"
+    "\n"
    ]
   }
  ],
