change detection update

--- a/scripts/ties_troubleshooting.ipynb
+++ b/scripts/ties_troubleshooting.ipynb
@@ -134,7 +134,7 @@
     "\n",
     "#then do the sequential subsetting, starting with the full dataframe - in the actual code this is a subset of the df for the cluster\n",
     "# #TODO the clust_df here is not actually correct, that will be the ties not the full df for the cluster_id\n",
-    "clust_df.rec_rank.max()\n",
+    "# clust_df.rec_rank.max()\n",
     "df1 = clust_df.loc[clust_df.rec_rank == clust_df.rec_rank.max()]\n",
     "df2 = df1.loc[df1.spike_rank == df1.spike_rank.max()]\n",
     "df3 = df2.loc[df2.max_rank == df2.max_rank.max()]\n",
