change detec docs

--- a/scripts/testing_run_ltop.ipynb
+++ b/scripts/testing_run_ltop.ipynb
@@ -15,9 +15,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LTOP version:  0.1.2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<module 'run_ltop_complete' from '/vol/v1/proj/LTOP_FTV_Py/LTOP_FTV_Py/scripts/run_ltop_complete.py'>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import ee \n",
     "import importlib\n",
@@ -45,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,12 +109,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#similar to snic, if you run this and create the tasks in GEE you will hit an error if those things already exist \n",
-    "km_status = kmeans_1.generate_snic_outputs(cfg)\n",
+    "#this one will generate the kmeans image\n",
+    "km_status = kmeans_1.generate_kmeans_image(cfg)\n",
     "    "
    ]
   },
@@ -114,6 +133,7 @@
    "outputs": [],
    "source": [
     "#similar to snic, if you run this and create the tasks in GEE you will hit an error if those things already exist \n",
+    "#this one will generate the stratified random fc derived from the kmeans image generated above \n",
     "km_pts_status = kmeans_2.generate_tasks(cfg)\n"
    ]
   },
@@ -227,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13 (default, Mar 29 2022, 02:18:16) \n[GCC 7.5.0]"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
