--- a/scripts/testing_run_ltop.ipynb
+++ b/scripts/testing_run_ltop.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,13 +10,12 @@
     "#### Notes\n",
     "- You need to authenticate the run with a specific GEE account. In the import params statement its going to trigger the ee.Authenticate() protocal which will prompt you to a browser page to authenticate using your GEE account. \n",
     "- Subsequent scripts have just the ee.Initialize protocal because you should have already authenicated and this should only happen once. \n",
-    "- Right now this is going to import the params from a separate .py file and treat those as imports. It may actually be easier/more straight forward if we're going to stick with a Jupyter Notebook to just put these directly into a cell here in the Jupyter Notebook. \n",
-    "- If you import a module at the top and then change something in the exe script you will need to restart or otherwise delete variables because that change won't be reflected otherwise. "
+    "- NOTE that if you are testing and you are changing things in external scripts you need to rerun the import cell to get the updates to external modules"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "<module 'run_ltop_complete' from '/vol/v1/proj/LTOP_FTV_Py/LTOP_FTV_Py/scripts/run_ltop_complete.py'>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,6 +47,7 @@
     "import run_SNIC_01 as runSNIC\n",
     "importlib.reload(runSNIC)\n",
     "import run_kMeans_02_1 as kmeans_1\n",
+    "importlib.reload(kmeans_1)\n",
     "import run_kMeans_02_2 as kmeans_2\n",
     "import abstract_sampling_03 as ab_img\n",
     "import abstract_imager_04 as run_lt_pts\n",
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
